# solvro-rekrutacja-2025

./: .gitignore  README.md  hello.py  pyproject.toml
latex/: references.bib  report.tex
reports/: cocktails_eda.html  ingredients_eda.html
src/: clusterization.ipynb  eda.py  main.py
